--- a/fm/src/app/header/header.component.scss
+++ b/fm/src/app/header/header.component.scss
@@ -31,6 +31,11 @@
   transition: width 0.3s;
 }
 
+.next{
+  background-color:#8929a6 ;
+  color: white;
+  float:right;
+}
 
 
 .nav-item:hover::after {
