--- a/fm/src/app/educational/educational.component.scss
+++ b/fm/src/app/educational/educational.component.scss
@@ -1,3 +1,7 @@
+span {
+  color: red;
+}
+
 .form-group {
   margin-bottom: 15px;
 }
@@ -63,7 +67,6 @@ h5{
    margin: 1rem;
 }
 
-
-
-
-
+.add h5 i {
+  margin-right: 8px;
+}
