--- a/fm/src/app/goals/goals.component.scss
+++ b/fm/src/app/goals/goals.component.scss
@@ -1,7 +1,7 @@
 .goals-container {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: left;
   padding: 20px;
   
   .goal-stepper {
@@ -21,7 +21,12 @@
   .add-goal-button {
     align-self: flex-start;
     // margin-bottom: 20px;
-    margin-left: 250px;
+    margin-left: 25px;
+  }
+  .add-goal-buttons {
+    align-self: flex-start;
+    // margin-bottom: 20px;
+    margin-left: 100px;
   }
 
   .goal-card {
