--- a/fm/src/app/leave-request/leave-request.component.html
+++ b/fm/src/app/leave-request/leave-request.component.html
@@ -1,90 +1,90 @@
-<div class="body">
-  <div class="container table-container">
-    <div class="d-flex justify-content-between align-items-center mb-3">
-      <div class="d-flex align-items-center">
-        <input
-          type="text"
-          class="form-control"
-          placeholder="Filter by Employee Name or Leave Type"
-          (input)="applyFilter($event)"
-        />
-      </div>
-      <div>
-        <button class="btn btn-primary me-2" (click)="applyLeave()">Add Request</button>
-        <button class="btn btn-danger" (click)="deleteSelectedRequests()">Delete Selected</button>
-      </div>
+
+<div class="container table-container">
+  <div class="d-flex justify-content-between align-items-center mb-3">
+    <div class="d-flex align-items-center">
+      <input
+        type="text"
+        class="form-control"
+        placeholder="Filter by Name or Leave Type"
+        (input)="applyFilter($event)"
+      />
     </div>
-
-    <!-- Leave request table -->
-    <div class="table-responsive">
-      <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-        <ng-container matColumnDef="select">
-          <th mat-header-cell *matHeaderCellDef>
-            <input type="checkbox" (change)="selectAll($event)" />
-          </th>
-          <td mat-cell *matCellDef="let request">
-            <input
-              type="checkbox"
-              (change)="onRowSelect($event, request)"
-              [(ngModel)]="request.selected"
-            />
-          </td>
-        </ng-container>
-
-        <ng-container matColumnDef="employeeName">
-          <th mat-header-cell *matHeaderCellDef>Employee Name</th>
-          <td mat-cell *matCellDef="let request">{{ request.employeeName }}</td>
-        </ng-container>
-
-        <ng-container matColumnDef="leaveType">
-          <th mat-header-cell *matHeaderCellDef>Leave Type</th>
-          <td mat-cell *matCellDef="let request">{{ request.leaveType }}</td>
-        </ng-container>
-
-        <ng-container matColumnDef="type">
-          <th mat-header-cell *matHeaderCellDef>Type</th>
-          <td mat-cell *matCellDef="let request">{{ request.type }}</td>
-        </ng-container>
-
-        <ng-container matColumnDef="leavePeriod">
-          <th mat-header-cell *matHeaderCellDef>Leave Period</th>
-          <td mat-cell *matCellDef="let request">{{ request.leavePeriod }}</td>
-        </ng-container>
-
-        <ng-container matColumnDef="days">
-          <th mat-header-cell *matHeaderCellDef>Days/Hours Taken</th>
-          <td mat-cell *matCellDef="let request">{{ request.daysTaken }} Day(s)</td>
-        </ng-container>
-
-        <ng-container matColumnDef="dateOfRequest">
-          <th mat-header-cell *matHeaderCellDef>Date of Request</th>
-          <td mat-cell *matCellDef="let request">{{ request.dateOfRequest }}</td>
-        </ng-container>
-
-        <ng-container matColumnDef="actions">
-          <th mat-header-cell *matHeaderCellDef>Actions</th>
-          <td mat-cell *matCellDef="let request" class="d-flex align-items-center">
-            <select class="form-select" (change)="onActionSelect($event, request)">
-              <option *ngFor="let action of actions" [value]="action">{{ action }}</option>
-            </select>
-            <button class="btn btn-danger ms-2" (click)="onDelete(request)">Delete</button>
-          </td>
-        </ng-container>
-
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-      </table>
-    </div>
-
-    <div class="pagination-container d-flex justify-content-between align-items-center mt-3">
-      <div>Total Record Count: <span>{{ dataSource.data.length }}</span></div>
-      <mat-paginator
-        [pageSizeOptions]="[5, 10, 20]"
-        [length]="dataSource.data.length"
-        [pageSize]="10"
-        showFirstLastButtons
-        (page)="setTableProperties()"
-      ></mat-paginator>
+    <div>
+      <button class="btn btn-primary me-2" (click)="applyLeave()">Add Request</button>
+      <button class="btn btn-danger" (click)="deleteSelectedRequests()">Delete Selected</button>
     </div>
   </div>
+
+  <!-- Leave request table -->
+  <div class="table-responsive">
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+      <ng-container matColumnDef="select">
+        <th mat-header-cell *matHeaderCellDef>
+          <input type="checkbox" (change)="selectAll($event)" />
+        </th>
+        <td mat-cell *matCellDef="let request">
+          <input
+            type="checkbox"
+            (change)="onRowSelect($event, request)"
+            [(ngModel)]="request.selected"
+          />
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="employeeName">
+        <th mat-header-cell *matHeaderCellDef>Employee Name</th>
+        <td mat-cell *matCellDef="let request">{{ request.employeeName }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="leaveType">
+        <th mat-header-cell *matHeaderCellDef>Leave Type</th>
+        <td mat-cell *matCellDef="let request">{{ request.leaveType }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="type">
+        <th mat-header-cell *matHeaderCellDef>Type</th>
+        <td mat-cell *matCellDef="let request">{{ request.type }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="leavePeriod">
+        <th mat-header-cell *matHeaderCellDef>Leave Period</th>
+        <td mat-cell *matCellDef="let request">{{ request.leavePeriod }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="days">
+        <th mat-header-cell *matHeaderCellDef>Days/Hours Taken</th>
+        <td mat-cell *matCellDef="let request">{{ request.daysTaken }} Day(s)</td>
+      </ng-container>
+
+      <ng-container matColumnDef="dateOfRequest">
+        <th mat-header-cell *matHeaderCellDef>Date of Request</th>
+        <td mat-cell *matCellDef="let request">{{ request.dateOfRequest }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="actions">
+        <th mat-header-cell *matHeaderCellDef>Actions</th>
+        <td mat-cell *matCellDef="let request" class="d-flex align-items-center">
+          <select class="form-select" (change)="onActionSelect($event, request)">
+            <option *ngFor="let action of actions" [value]="action">{{ action }}</option>
+          </select>
+          <button class="btn btn-danger ms-2" (click)="onDelete(request)">Delete</button>
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+  </div>
+
+  <footer class="pagination-container d-flex justify-content-between align-items-center mt-3">
+    <div>Total Record Count: <span>{{ dataSource.data.length }}</span></div>
+    <mat-paginator
+      [pageSizeOptions]="[5, 10, 20]"
+      [length]="dataSource.data.length"
+      [pageSize]="10"
+      showFirstLastButtons
+      (page)="setTableProperties()"
+    ></mat-paginator>
+  </footer>
 </div>
+
