--- a/fm/src/app/leave-request/leave-request.component.scss
+++ b/fm/src/app/leave-request/leave-request.component.scss
@@ -47,6 +47,9 @@ body {
 .container::-webkit-scrollbar-thumb:hover {
   background-color: #0056b3;
 }
+.form-control::placeholder{
+  font-size: small;
+}
 
 
 @media (max-width: 768px) {
@@ -98,6 +101,7 @@ p {
   max-height: 400px; /* Set a max height */
   overflow-y: auto; /* Enable vertical scrolling */
   overflow-x: hidden; /* Hide horizontal scrolling */
+  height: 100%;
 }
 
 table {
