--- a/fm/src/app/leave-summary/apply-leave/apply-leave.component.html
+++ b/fm/src/app/leave-summary/apply-leave/apply-leave.component.html
@@ -6,7 +6,7 @@
         <mat-icon>close</mat-icon>
       </button>
     </mat-card-header>
-    
+
     <mat-card-content>
       <form [formGroup]="leaveForm" (ngSubmit)="onSubmit()">
         <!-- Leave Type -->
@@ -21,36 +21,24 @@
 
         <mat-form-field appearance="fill" class="full-width">
           <mat-label>Start Date</mat-label>
-          <input
-            matInput
-            [matDatepicker]="startDatePicker"
-            [min]="today"
-            formControlName="startDate"
-            required
-            (dateChange)="onStartDateChange($event)"
-          />
+          <input matInput [matDatepicker]="startDatePicker" [min]="today" formControlName="startDate" required
+            (dateChange)="onStartDateChange($event)" />
           <mat-datepicker-toggle matSuffix [for]="startDatePicker"></mat-datepicker-toggle>
           <mat-datepicker #startDatePicker></mat-datepicker>
           <mat-error *ngIf="startDateError">{{ startDateError }}</mat-error>
         </mat-form-field>
-        
+
         <!-- End Date -->
         <mat-form-field appearance="fill" class="full-width">
           <mat-label>End Date</mat-label>
-          <input
-            matInput
-            [matDatepicker]="endDatePicker"
-            [min]="minEndDate"
-            formControlName="endDate"
-            required
-            [disabled]="dateForm?.get('startDate')?.value === null" 
-          />
+          <input matInput [matDatepicker]="endDatePicker" [min]="minEndDate" formControlName="endDate" required
+            [disabled]="!leaveForm.get('startDate')?.value" />
           <mat-datepicker-toggle matSuffix [for]="endDatePicker"></mat-datepicker-toggle>
           <mat-datepicker #endDatePicker></mat-datepicker>
           <mat-error *ngIf="endDateError">{{ endDateError }}</mat-error>
         </mat-form-field>
-        
-        
+
+
 
 
         <!-- Team Email ID -->
@@ -60,14 +48,14 @@
           <mat-error *ngIf="leaveForm.get('teamEmail')?.hasError('required')">Team Email ID is required</mat-error>
         </mat-form-field>
 
-        
+
         <mat-form-field appearance="fill" class="full-width">
           <mat-label>Reason for Leave</mat-label>
           <textarea matInput formControlName="reason" required></textarea>
           <mat-error *ngIf="leaveForm.get('reason')?.hasError('required')">Reason for Leave is required</mat-error>
         </mat-form-field>
 
-       
+
 
         <div class="button-group">
           <button mat-raised-button color="primary" type="submit">Submit</button>
