--- a/fm/src/app/my-task/my-task.component.html
+++ b/fm/src/app/my-task/my-task.component.html
@@ -10,7 +10,7 @@
   <div class="action-buttons">
     <button mat-raised-button color="primary" (click)="openModal()">Add Task</button>
     <button mat-icon-button (click)="toggleFilterPopup()" matTooltip="Filter Tasks">
-      <mat-icon>filter_list</mat-icon>
+      <mat-icon style="color: #00008b;">filter_list</mat-icon>
     </button>
   </div>
 </div>
@@ -87,7 +87,7 @@
           <button class="icon-button edit-button" (click)="editTask(task)">
             <i class="fas fa-edit"></i>
           </button>
-          <button class="icon-button delete-button" (click)="deleteTask(task.id)">
+          <button class="icon-button delete-button" (click)="deleteTask(task.taskId)">
             <i class="fas fa-trash-alt"></i>
           </button>
         </td>
