--- a/fm/src/app/teams-dashboard/teams-dashboard.component.scss
+++ b/fm/src/app/teams-dashboard/teams-dashboard.component.scss
@@ -11,7 +11,8 @@
 }
 
 .nav-item {
-  padding: 0.5rem 1rem; /* Reduced padding */
+  padding: 5px; /* Reduced padding */
+  margin: 5px;
   cursor: pointer;
   color: black;
   font-weight: bold;
