--- a/fm/src/app/leave-request/leave-request.component.scss
+++ b/fm/src/app/leave-request/leave-request.component.scss
@@ -9,6 +9,42 @@
   button {
     margin-bottom: 16px;
   }
+}
+.container {
+  flex: 1; 
+  overflow-y: auto; 
+  padding: 20px; 
+  background-color: #fff; 
+  border-radius: 8px; 
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); 
+}
+
+
+.container::-webkit-scrollbar {
+  width: 10px;
+}
+.table-container[_ngcontent-ng-c3076248906] {
+  padding: 20px;
+  max-width: 100%;
+}
+
+.container::-webkit-scrollbar-thumb {
+  background-color: #007bff; 
+  border-radius: 5px; 
+}
+
+.container::-webkit-scrollbar-thumb:hover {
+  background-color: #0056b3;
+}
+.form-control::placeholder{
+  font-size: small;
+}
+
+
+@media (max-width: 768px) {
+  .body {
+    padding: 10px;
+  }
 
   // Filter container styling
   .filter-container {
@@ -106,4 +142,56 @@
       }
     }
   }
+}
+
+h1 {
+  font-size: 24px;
+  margin: 0 0 20px;
+  color: #007bff;
+}
+
+
+p {
+  line-height: 1.6; 
+}
+
+
+.btn {
+  border-radius: 4px;
+  padding: 10px 15px;
+  font-size: 14px;
+  transition: background-color 0.3s, transform 0.2s;
+}
+
+
+.btn-primary {
+  background-color: #007bff; 
+  color: white;
+  border: none;
+}
+
+
+.btn-primary:hover {
+  background-color: #0056b3; 
+  transform: scale(1.05);
+}
+.table-container {
+  padding: 20px; /* Add padding for visual comfort */
+}
+
+.table-responsive {
+  max-height: 400px; /* Set a max height */
+  overflow-y: auto; /* Enable vertical scrolling */
+  overflow-x: hidden; /* Hide horizontal scrolling */
+  height: 100%;
+}
+
+table {
+  width: 100%; /* Ensure the table takes the full width of the container */
+  table-layout: fixed; /* Make sure table layout does not change */
+}
+
+.mat-paginator {
+  margin-top: 20px; /* Add some spacing above the paginator */
+  max-width: 100%;
 }
